// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>Docutils-general:</paragraph><bullet_list bullet=\\"*\\"><list_item><paragraph><reference name=\\"Docutils Front-End Tools &lt;user/tools.html&gt;\`\\" anonymous=\\"1\\">Docutils Front-End Tools &lt;user/tools.html&gt;\`</reference></paragraph></list_item><list_item><paragraph><reference name=\\"Docutils Configuration &lt;user/config.html&gt;\`\\" anonymous=\\"1\\">Docutils Configuration &lt;user/config.html&gt;\`</reference></paragraph></list_item><list_item><paragraph><reference name=\\"Docutils Mailing Lists &lt;user/mailing-lists.html&gt;\`\\" anonymous=\\"1\\">Docutils Mailing Lists &lt;user/mailing-lists.html&gt;\`</reference></paragraph></list_item><list_item><paragraph><reference name=\\"Docutils Link List &lt;user/links.html&gt;\`\\" anonymous=\\"1\\">Docutils Link List &lt;user/links.html&gt;\`</reference></paragraph></list_item></bullet_list></document>"
`;

exports[`Emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis and inline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> and <strong>goodbye</strong></paragraph></document>"
`;

exports[`Emphasis followed by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> test</paragraph></document>"
`;

exports[`Emphasis preceded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis surrounded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis> things</paragraph></document>"
`;

exports[`Inline followed by emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong> and <emphasis>goodbye</emphasis></paragraph></document>"
`;

exports[`Random 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Random 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"header\\\\ 1\\" names=\\"header\\\\ 1\\">
<title>Header 1</title><paragraph>Text</paragraph><section ids=\\"header\\\\ 2\\" names=\\"header\\\\ 2\\"><title>Header 2</title><system_message line=\\"6\\"><paragraph>Title underline too short.</paragraph><literal_block>Header 2
-------</literal_block></system_message></section></section></document>"
`;

exports[`Random 2 2`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>Test.
Test2
Test3
-----</paragraph></document>"
`;

exports[`Random 4 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"test3\\" names=\\"test3\\">
<title>Test3</title><paragraph>This is a test.</paragraph><bullet_list bullet=\\"*\\"><list_item><paragraph>BUllet list 1</paragraph></list_item><list_item><paragraph>The emacs rst editor is weird.</paragraph></list_item></bullet_list></section></document>"
`;

exports[`Strong 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong></paragraph></document>"
`;

exports[`Title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"title\\" names=\\"title\\">
<title>Title</title><paragraph>Paragraph.</paragraph></section></document>"
`;

exports[`docutils title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<section ids=\\"docutils\\\\ project documentation overview\\" names=\\"docutils\\\\ project documentation overview\\">
<title><reference name=\\"Docutils\\" refname=\\"docutils\\">Docutils</reference> Project Documentation Overview</title></section></document>"
`;
